# nook

./: .gitignore  CLAUDE.md  Justfile  README.md  USERSTORIES.md  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json
.github/workflows/: ci.yml  e2e.yml
src/: App.svelte  app.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  error.rs  lib.rs  main.rs  state.rs  types.rs
src-tauri/src/config/: mod.rs  pod_state.rs  settings.rs
src-tauri/src/devcontainer/: cli.rs
src-tauri/src/docker/: containers.rs  logs.rs  mod.rs  ports.rs  processes.rs  stats.rs
src-tauri/src/network/: cache.rs  expose.rs  heuristics.rs  mod.rs  polling.rs  probe.rs  scan.rs
src-tauri/src/terminal/: mod.rs  shell.rs
src-tauri/src/test_api/: commands.rs  mock_data.rs  mod.rs
src/lib/: types.ts
src/lib/api/: tauri.ts  test-api.ts
src/lib/components/: AddPodDialog.svelte  DeleteConfirmDialog.svelte  ErrorPopup.svelte  LogViewer.svelte  NookLogo.svelte  NotificationToast.svelte  OnboardingChecklist.svelte  PodGrid.svelte  PodSettingsDialog.svelte  PodTile.svelte  PodTileInactive.svelte  PortBadge.svelte  PortPrompt.svelte  ProcessList.svelte  ResourceChart.svelte  SettingsPanel.svelte  StatusBar.svelte
src/lib/stores/: logs.svelte.ts  pods.svelte.ts  settings.svelte.ts
src/lib/utils/: format.ts
tests/: e2e-smoke.mjs
tests/e2e/: global-setup.ts  global-teardown.ts  playwright.config.ts
tests/e2e/helpers/: e2e-helpers.ts
tests/visual/: playwright.config.ts
(+11 files in other folders)
