[package]
name = "nook"
version = "0.1.0"
edition = "2021"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
test-api = []

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tokio = { version = "1", features = ["full"] }
bollard = "0.18"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
dirs = "6"
regex = "1"
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures-util = "0.3"
uuid = { version = "1", features = ["v4"] }
tokio-util = "0.7"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[lib]
name = "nook_lib"
crate-type = ["lib", "cdylib", "staticlib"]
